src/tests/snapshots/tiny_lang__tests__test_parser__assignement_parsing.snap
---
source: src/tests/test_parser.rs
assertion_line: 196
expression: "&ast"
---
Ok(
    [
        Let(
            Ident(
                "a",
            ),
            None,
            Literal(
                UnsignedInteger(
                    454,
                ),
            ),
        ),
        Mutate(
            Ident(
                "a",
            ),
            Literal(
                UnsignedInteger(
                    0,
                ),
            ),
            false,
        ),
        Expr(
            Call(
                FunctionCall {
                    parameters: [
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ],
                    name: "print",
                },
            ),
        ),
    ],
)
