src/tests/snapshots/tiny_lang__tests__test_parser__bitwise_shift_parsing.snap
---
source: src/tests/test_parser.rs
expression: "&ast"
---
Ok(
    [
        Let(
            Ident(
                "a",
            ),
            Infix(
                LeftShift,
                Literal(
                    UnsignedInteger(
                        5,
                    ),
                ),
                Literal(
                    UnsignedInteger(
                        1,
                    ),
                ),
            ),
        ),
    ],
)
