src/tests/snapshots/tiny_lang__tests__test_parser__char_parsing_dual.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Expr(
            Infix(
                GreaterThan,
                Literal(
                    Char(
                        '\n',
                    ),
                ),
                Literal(
                    Char(
                        'n',
                    ),
                ),
            ),
        ),
    ],
)
