src/tests/snapshots/tiny_lang__tests__test_parser__expression_statement_infix.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(code).parse()"
---
Ok(
    [
        Expr(
            Infix(
                Plus,
                Infix(
                    Plus,
                    Literal(
                        UnsignedInteger(
                            5456,
                        ),
                    ),
                    Literal(
                        UnsignedInteger(
                            33563,
                        ),
                    ),
                ),
                Literal(
                    UnsignedInteger(
                        34,
                    ),
                ),
            ),
        ),
    ],
)
