src/tests/snapshots/tiny_lang__tests__test_parser__let_pointer_statement.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Let(
            Ident(
                "something",
            ),
            Some(
                Ptr(
                    SignedInteger,
                ),
            ),
            Literal(
                UnsignedInteger(
                    90,
                ),
            ),
        ),
    ],
)
