src/tests/snapshots/tiny_lang__tests__test_parser__let_statement_parsing.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Let(
            Ident(
                "something",
            ),
            None,
            Infix(
                Minus,
                Infix(
                    Plus,
                    Literal(
                        UnsignedInteger(
                            454,
                        ),
                    ),
                    Infix(
                        Multiply,
                        Literal(
                            UnsignedInteger(
                                3,
                            ),
                        ),
                        Literal(
                            UnsignedInteger(
                                4,
                            ),
                        ),
                    ),
                ),
                Literal(
                    UnsignedInteger(
                        35,
                    ),
                ),
            ),
        ),
    ],
)
