src/tests/snapshots/tiny_lang__tests__test_parser__prefix_expression_parsing.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Let(
            Ident(
                "val",
            ),
            None,
            Prefix(
                Plus,
                Literal(
                    UnsignedInteger(
                        454,
                    ),
                ),
            ),
        ),
    ],
)
