src/tests/snapshots/tiny_lang__tests__test_parser__string_parsing.snap
---
source: src/tests/test_parser.rs
assertion_line: 17
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Let(
            Ident(
                "something",
            ),
            None,
            Literal(
                String(
                    "vivek",
                ),
            ),
        ),
    ],
)
